--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             make install
-            # Install hadolint
+            # Install hadolint to lint Dockerfile
             wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
             chmod +x /bin/hadolint
 
@@ -28,11 +28,33 @@ jobs:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
-
       
       - run:
-          name: run lint
+          name: Run Code Linting
           command: |
             . venv/bin/activate
             make lint           
+      - run:
+          name: Run Pytest
+          command: |
+            . venv/bin/activate
+            make test           
 
+  create_image:
+    docker:
+      - image: cimg/base:2023.02
+    steps:
+      - checkout
+      - run:
+        name: Create Container Image
+        command: |
+          docker build -t sklearn-app:v1.0.0 .
+          docker tag sklearn-app:v1.0.0 peterhuynh99/projectapp:v1.0.0
+          docker push peterhuynh99/projectapp:v1.0.0
+
+workflows:
+  default:
+    jobs:
+      - build
+      - create_image:
+          requires: [build]
