--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,25 +44,14 @@ jobs:
 
   create_image:
     docker:
-      - image: cimg/base:2023.02
+      # - image: cimg/base:2023.02
+      - image: docker:17.05.0-ce-git
     steps:
       - checkout
       - run:
           name: Create Container Image
           command: |
-            cat /etc/os-release
-            sudo apt update
-            sudo apt install apt-transport-https ca-certificates curl software-properties-common
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-            sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
-            apt-cache policy docker-ce
-            sudo apt install docker-ce
-            sudo systemctl status docker
-            sudo usermod -aG docker ${USER}
-            su - ${USER}
-            groups
-            sudo usermod -aG docker ${USER}
-            newgrp ${USER}
+            cat /etc/os-release           
 
             # build app docker image
             docker build -t sklearn-app:v1.0.0 .
