--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
   create_image:
     docker:
       # - image: cimg/base:2023.02
-      - image: docker:17.05.0-ce-git
+      - image: docker:latest
     steps:
       - checkout
       - run:
