--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,19 +44,30 @@ jobs:
 
   create_image:
     docker:
-      # - image: cimg/base:2023.02
-      - image: docker:latest
+      - image: cimg/base:2023.02      
+    environment:
+      username: $DOCKERHUB_USERNAME
+      password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
+      - setup_remote_docker
       - run:
-          name: Create Container Image
+          name: Install Docker Client
           command: |
-            cat /etc/os-release           
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
 
-            # build app docker image
-            docker build -t sklearn-app:v1.0.0 .
-            docker tag sklearn-app:v1.0.0 peterhuynh99/projectapp:v1.0.0
-            docker push peterhuynh99/projectapp:v1.0.0
+      - run:
+          name: Build and Push Docker Image
+          command: |
+            cat /etc/os-release                                 
+            TAG="v1.0.0"
+            docker build -t peterhuynh99/projectapp:${TAG} .
+            docker login --username ${DOCKERHUB_USERNAME} --password ${DOCKERHUB_PASSWORD}
+            docker push peterhuynh99/projectapp:${TAG}
 
 workflows:
   default:
