--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,5 +73,5 @@ workflows:
   default:
     jobs:
       - build
-      - create_image:
-          requires: [build]
+      # - create_image:
+      #     requires: [build]
