--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,11 @@ jobs:
       - run: 
           name: Create AWS Infrastructure
           command: |
-            aws cloudformation create-stack --stack-name ph-cf-infra-${CIRCLE_WORKFLOW_ID:0:7} --template-body file://cfn_network_infra.yml --parameters file://cfn_network_infra_parameters.json  --region us-west-2 
+            aws cloudformation create-stack --stack-name ph-cf-network-infra --template-body file://cfn_network_infra.yml --parameters file://cfn_network_infra_parameters.json  --region us-west-2 
+
+            sleep 30
+
+            aws cloudformation describe-stacks --stack-name ph-cf-network-infra --region us-west-2
   
   delete_aws_infrastructure:
     docker:
@@ -87,7 +91,7 @@ jobs:
       - run: 
           name: Delete AWS Infrastructure
           command: |
-            aws cloudformation delete-stack --stack-name ph-cf-infra-${CIRCLE_WORKFLOW_ID:0:7} --region us-west-2 
+            aws cloudformation delete-stack --stack-name ph-cf-network-infra --region us-west-2 
 
 
 
