--- a/cfn_network_infra.yml
+++ b/cfn_network_infra.yml
@@ -7,6 +7,7 @@ Parameters:
       - dev
       - qa
       - prod
+    Default: "qa"
 
   VpcCIDR:
     Description: "Please enter the IP range CIDR notation for this VPC"
