--- a/.circleci/files/server.yml
+++ b/.circleci/files/server.yml
@@ -42,7 +42,7 @@ Resources:
         - Ref: InstanceSecurityGroup
       KeyName: phuynh-cicd-ec2
       ImageId: !Ref AMItoUse
-      Subnets: 
+      SubnetId: 
         - Fn::ImportValue: !Sub ${EnvironmentName}-PUB1-SN
       
       Tags:
