--- a/.circleci/files/server.yml
+++ b/.circleci/files/server.yml
@@ -43,7 +43,7 @@ Resources:
       KeyName: phuynh-cicd-ec2
       ImageId: !Ref AMItoUse
       SubnetId: 
-        - Fn::ImportValue: !Sub ${EnvironmentName}-PUB1-SN
+        - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
       
       Tags:
         - Key: Name
