--- a/.circleci/files/server.yml
+++ b/.circleci/files/server.yml
@@ -42,8 +42,8 @@ Resources:
         - Ref: InstanceSecurityGroup
       KeyName: phuynh-cicd-ec2
       ImageId: !Ref AMItoUse
-      SubnetId: 
-        - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
+      # SubnetId: 
+      #   - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
       
       Tags:
         - Key: Name
