add code to create ec2 instance.

--- a/.circleci/files/server.yml
+++ b/.circleci/files/server.yml
@@ -38,7 +38,7 @@ Resources:
     Type: AWS::EC2::Instance
     Properties:
       InstanceType: !Ref InstanceType
-      SecurityGroups:
+      SecurityGroupIds:
         - Ref: InstanceSecurityGroup
       KeyName: phuynh-cicd-ec2
       ImageId: !Ref AMItoUse
