--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - run: 
           name: Delete AWS Infrastructure
           command: |
-            aws cloudformation delete-stacks --stack-name ph-cf-network-infra --region us-west-2 
+            aws cloudformation delete-stack --stack-name ph-cf-network-infra --region us-west-2 
   
   create_ec2_deployment_server:
     docker:
@@ -127,7 +127,7 @@ jobs:
       - run: 
           name: Delete AWS Infrastructure
           command: |
-            aws cloudformation delete-stacks --stack-name ph-cf-ec2-server --region us-west-2 
+            aws cloudformation delete-stack --stack-name ph-cf-ec2-server --region us-west-2 
 
   configure_ec2_deployment_server:
     docker:
@@ -158,7 +158,8 @@ workflows:
       # - create_aws_infrastructure
       # - create_ec2_deployment_server:
       #     requires: [create_aws_infrastructure]
-      - delete_ec2_deployment_server
+      - delete_ec2_deployment_server          
       - create_ec2_deployment_server
+          requires: [delete_ec2_deployment_server]
       - configure_ec2_deployment_server:
           requires: [create_ec2_deployment_server]
