--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ workflows:
       # - create_ec2_deployment_server:
       #     requires: [create_aws_infrastructure]
       - delete_ec2_deployment_server          
-      - create_ec2_deployment_server
+      - create_ec2_deployment_server:
           requires: [delete_ec2_deployment_server]
       - configure_ec2_deployment_server:
           requires: [create_ec2_deployment_server]
