--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,8 +158,7 @@ workflows:
       # - create_aws_infrastructure
       # - create_ec2_deployment_server:
       #     requires: [create_aws_infrastructure]
-      - delete_ec2_deployment_server          
-      - create_ec2_deployment_server:
-          requires: [delete_ec2_deployment_server]
+      # - delete_ec2_deployment_server          
+      - create_ec2_deployment_server:          
       - configure_ec2_deployment_server:
           requires: [create_ec2_deployment_server]
