--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,7 @@ jobs:
           command: |
             date
             sleep 2m
+            echo "Wake Up!."
 
       - run:
           name: Retrieve EC2 server ip and add to ansible inventory
