--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -14,6 +14,13 @@
   apt:
     autoremove: yes 
 
+- name: "Install uzip package"
+  become: yes
+  apt:
+    name: ["unzip"]
+    state: latest
+    update_cache: yes
+
 - name: "Install AWS CLI"
   shell: |
     curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
