--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,6 +163,103 @@ jobs:
             ansible-inventory -v --list -i .circleci/ansible/inventory.txt
             cat .circleci/ansible/inventory.txt
             ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/configure-server.yml
+   
+  attach_role_to_ec2_server:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: 
+          name: Get instance id and attach pre-defined role 
+          command: |            
+            instance_id=(`aws ec2 describe-instances --filters   "Name=tag:Name,Values=qa-ec2-cicd" --query Reservations[*].Instances[*].InstanceId --output text --region us-west-2 
+
+            aws ec2 associate-iam-instance-profile --instance-id ${instnace_id} --iam-instance-profile Name=phuynh-cicd --region us-west-2
+
+  create_eks_cluster:
+    docker:
+      - image: python:3.11-rc-alpine
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["5a:ef:53:88:90:cb:f4:43:bc:61:9f:db:64:b5:62:c5"]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install ansible dependencies
+          command: |
+            apk add --update ansible
+            pip install awscli --upgrade
+            ansible --version
+      - run:
+          name: Create EKS Cluster
+          command: |
+            ansible-inventory -v --list -i .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
+            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/create_eks_cluster.yml    
+     - run:
+          name: Sleep 25 mins waiting for EKS Custer Ready!.
+          no_output_timeout: 50m
+          command: |
+            date
+            sleep 25m
+            echo "Wake Up!. Eks should be ready now!."
+  
+  create_delpoyment_eks_cluster:
+    docker:
+      - image: python:3.11-rc-alpine
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["5a:ef:53:88:90:cb:f4:43:bc:61:9f:db:64:b5:62:c5"]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install ansible dependencies
+          command: |
+            apk add --update ansible
+            pip install awscli --upgrade
+            ansible --version   
+
+      - run:
+          name: Create EKS Deployment
+          command: |
+            ansible-inventory -v --list -i .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
+            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/create_eks_deploy.yml  
+  
+  create_service_eks_cluster:
+    docker:
+      - image: python:3.11-rc-alpine
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["5a:ef:53:88:90:cb:f4:43:bc:61:9f:db:64:b5:62:c5"]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install ansible dependencies
+          command: |
+            apk add --update ansible
+            pip install awscli --upgrade
+            ansible --version   
+
+      - run:
+          name: Create EKS Service
+          command: |
+            ansible-inventory -v --list -i .circleci/ansible/inventory.txt
+            cat .circleci/ansible/inventory.txt
+            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/create_eks_service.yml  
+
+  delete_eks_cluster:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run: 
+          name: Delete EKS Cluster
+          command: |
+            aws cloudformation delete-stack --stack-name eksctl-ph-cf-eks-cluster --region us-west-2   
 
 
 workflows:
@@ -173,8 +270,16 @@ workflows:
       #     requires: [build]
       # - create_aws_infrastructure
       # - create_ec2_deployment_server:
-      #     requires: [create_aws_infrastructure]
-      # - delete_ec2_deployment_server          
+      #     requires: [create_aws_infrastructure]      
       - create_ec2_deployment_server          
       - configure_ec2_deployment_server:
           requires: [create_ec2_deployment_server]
+      - attach_role_to_ec2_server
+      - create_eks_cluster:
+          requires: [attach_role_to_ec2_server]
+      - create_delpoyment_eks_cluster
+      - create_service_eks_cluster
+      #- delete_ec2_deployment_server          
+      #- delete_eks_cluster
+      #- delete_aws_infrastructure
+
