--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,7 @@ jobs:
       - run: 
           name: Get instance id and attach pre-defined role 
           command: |            
-            instance_id=$(`aws ec2 describe-instances --filters   "Name=tag:Name,Values=qa-ec2-cicd" --query Reservations[*].Instances[*].InstanceId --output text --region us-west-2')
+            instance_id=$(`aws ec2 describe-instances --filters   "Name=tag:Name,Values=qa-ec2-cicd" --query Reservations[*].Instances[*].InstanceId --output text --region us-west-2`)
 
             aws ec2 associate-iam-instance-profile --instance-id ${instance_id} --iam-instance-profile Name=phuynh-cicd --region us-west-2
 
@@ -271,11 +271,11 @@ workflows:
       # - create_aws_infrastructure
       # - create_ec2_deployment_server:
       #     requires: [create_aws_infrastructure]      
-      - create_ec2_deployment_server          
-      - configure_ec2_deployment_server:
-          requires: [create_ec2_deployment_server]
+      # - create_ec2_deployment_server          
       - attach_role_to_ec2_server:
-          requires: [configure_ec2_deployment_server]
+      #   requires: [create_ec2_deployment_server]
+      # - configure_ec2_deployment_server:
+      #     requires: [attach_role_to_ec2_server]      
       - create_eks_cluster:
           requires: [attach_role_to_ec2_server]
       - create_delpoyment_eks_cluster:
