--- a/.circleci/ansible/roles/create-eks-cluster/tasks/main.yml
+++ b/.circleci/ansible/roles/create-eks-cluster/tasks/main.yml
@@ -23,7 +23,7 @@
 
 - name: "Create EKS Cluster"
   shell: |
-    eksctl create cluster --name ph-cf-eks --region us-west-2 --node-type t2.large --nodes-min 2 --nodes-max 2
+    eksctl create cluster --name ph-cf-eks --region us-west-2 --node-type t3.small --nodes-min 2 --nodes-max 2
     
 
 ...
