--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,10 +110,10 @@ jobs:
 
       - run:
           name: Sleep 2 mins waiting for EC2 Boot
-          no_output_timeout: 5m
+          no_output_timeout: 15m
           command: |
             date
-            sleep 2m
+            sleep 5m
             echo "Wake Up!."
 
       - run:
@@ -121,7 +121,7 @@ jobs:
           command: |
             echo "" > inventory.txt
             echo [ec2] > inventory.txt            
-            aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=qa-server-cicd" --output text >> .circleci/ansible/inventory.txt --region us-west-2 
+            aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --filters "Name=tag:Name,Values=qa-server-cicd2" --output text >> .circleci/ansible/inventory.txt --region us-west-2 
 
       - run:
           name: Check inventory file content
@@ -172,7 +172,7 @@ jobs:
       - run: 
           name: Get instance id and attach pre-defined role 
           command: |            
-            instance_id=`aws ec2 describe-instances --filters   "Name=tag:Name,Values=qa-server-cicd" --query Reservations[*].Instances[*].InstanceId --output text --region us-west-2`
+            instance_id=`aws ec2 describe-instances --filters   "Name=tag:Name,Values=qa-server-cicd2" --query Reservations[*].Instances[*].InstanceId --output text --region us-west-2`
 
             aws ec2 associate-iam-instance-profile --instance-id ${instance_id} --iam-instance-profile Name=phuynh-cicd --region us-west-2
 
