--- a/.circleci/files/server.yml
+++ b/.circleci/files/server.yml
@@ -42,4 +42,4 @@ Resources:
         Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN" 
       Tags:
         - Key: Name
-          Value: qa-server-cicd
+          Value: qa-server-cicd2
